# CppTp

./: CMakeLists.txt  Cell.cpp  LinkedList.cpp  Option.cpp  Result.cpp  main.cpp  mainTemplate.cpp  makefile  templateLinkedList.cpp
DoubleLinkedList/: Cell.cpp  DoubleLinkedList.cpp  Node.cpp  main.cpp
Option/: None.cpp  Option.cpp  Some.cpp  main.cpp
Result/: Error.cpp  Result.cpp  Value.cpp
TP/: AList.cpp  mainTp.cpp
TP/LinkedList/: Cell.cpp  LinkedList.cpp
TP/TreeList/: Node.cpp  TreeList.cpp
